# first_python_package

./: .pypirc  README.md  setup.cfg  setup.py
src/example_pkg/: greetings.py
