[metadata]
name = kobefang
version = 0.0.2
author = Yves William OBAME EDOU
author_email = yw.obame@gmail.com
description = A package with function to speak fang
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yviouswilliamous/first_python_package
project_urls =
    Bug Tracker = https://github.com/yviouswilliamous/first_python_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src